<resources>
    <string name="app_name">DiSign</string>
    <string name="start_your_event">Start your event</string>
    <string name="you_don_t_have_an_account_signup_here">You don\'t have an account? Sign up here</string>
    <string name="log_in">Log In</string>
    <string name="dp">dp</string>
    <string name="phone_no">Phone No</string>
    <string name="password">Password</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="new_account">New Account</string>
    <string name="_1_2">"1/3"</string>
    <string name="steps">STEPS</string>
    <string name="upload_a_profile_picture_optional">Upload a profile picture (Optional)</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="verify">Verify</string>
    <string name="verification_text">A verification code is sent to your phone. Wait until system detects the verification pin or enter the pin that was sent to you as an SMS</string>
    <string name="verification_code">Verification Code</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="password_again">Password Again</string>
    <string name="autoverifyError">Cannot detect the verification code please enter the verification code in the below box</string>
    <string name="ok">OK</string>
    <string name="no">Change Number</string>
    <string name="noEmail">Change Email</string>
    <string name="nav_events">Your Events</string>
    <string name="new_event">New</string>
    <string name="new_event_nav">New Event</string>
    <string name="add_event">Add Event</string>
    <string name="name_of_organization">Name of Organization</string>
    <string name="place">Place</string>
    <string name="date">Enter a date</string>
    <string name="choose_a_time">Enter a time</string>
    <string name="limit">Number of Persons</string>
    <string name="create">Create</string>
    <string name="choose">Choose</string>
    <string name="dot">•</string>
    <string name="save">Save</string>
    <string name="ScanReq">Scan the QR code to register</string>
    <string name="downReq">Download DiSign App from the PlayStore</string>
    <string name="share">Share</string>
    <string name="shareReq">Share using Gmail is Recommended</string>
    <string name="list">List</string>
    <string name="view_barcode">View QR code</string>
    <string name="participants">Participants</string>
    <string name="scan_success">Scan Success</string>
    <string name="welcome_to">"Welcome to "</string>
    <string name="at">"Location:"</string>
    <string name="time">"Time : "</string>
    <string name="timet">Time</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="invite">Invite</string>
    <string name="faq">FAQ</string>
    <string name="settings">Settings</string>
    <string name="recyclerText">Your event list is empty. Create new event by clicking on the new button.</string>
    <string name="forget_password">Forget Password?</string>
    <string name="daily_limit">Daily Limit :</string>
    <string name="admobId">ca-app-pub-9184680471174773~4260578639</string>
    <string name="visitors">Visitors</string>
    <string name="click_here_to_scan">Click here to Scan</string>
    <string name="failed">Scan Failed</string>
    <string name="fight">Let\'s avoid the use of pen and paper. Just scan this qr code instead of signing in paper</string>
    <string name="appFullName">DiSign - Digital Signature</string>
    <string name="ddddd">Date :</string>
    <string name="title">Title</string>
    <string name="your_events">Your Events</string>
    <string name="visit_history">Visit History</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="skip">Skip?</string>
    <string name="google_login">Google Login</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="username">Username</string>
    <string name="phone_number_not_available">Phone number not available</string>
    <string name="phone_number_is_not_registered">Phone number is not registered</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_subText">DiSign will send a SMS message to verify your phone number. It is not optional.</string>
    <string name="carrier_sms_charges_may_apply">Carrier SMS charges may apply</string>
    <string name="emptyList_text">Your visiting list is empty Click the below scan button and scan the QR. Your visiting history will be shown here</string>
    <string name="icon">icon</string>
</resources>
